<resources>
    <string name="app_name">Freight App</string>
    <string name="action_logout">Logout</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="park">Park</string>
    <string name="unpark">Unpark</string>
    <string name="track">Track</string>
    <string name="conId">Consignment No</string>
    <string name="payterm">PayTerms</string>
    <string name="custRef">Cust Ref</string>
    <string name="sendAcc">Sender Account</string>
    <string name="sendName">Sender Name</string>
    <string name="sendAddress">Sender Address</string>
    <string name="sendCity">Sender City</string>
    <string name="sendPostcode">Sender PostCode</string>
    <string name="sendCountry">Sender Country</string>
    <string name="sendContactName">Sender Contact Name</string>
    <string name="sendContactNo">Sender Contact Number</string>
    <string name="recAcc">Receiver Account</string>
    <string name="recName">Receiver Name</string>
    <string name="recAddress">Receiver Address</string>
    <string name="recCity">REceiver City</string>
    <string name="recPostcode">Receiver PostCode</string>
    <string name="recCountry">Receiver Country</string>
    <string name="recContactName">Receiver Contact Name</string>
    <string name="recContactNo">Receiver Contact Number</string>
    <string-array name="service">
        <item>Express</item>
        <item>Economy</item>
    </string-array>
    <string-array name="opt">
        <item></item>
        <item>Priority</item>
        <item>Insurance</item>
    </string-array>
    <string name="dg">Dangerous Goods</string>
    <string name="dg_yes">Yes</string>
    <string name="dg_no">No</string>
    <string name="noPiece">No. of Pieces</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string-array name="currency">
        <item>AUD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>JPY</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>USD</item>
    </string-array>
    <string name="acc">Account Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postcode">PostCode</string>
    <string name="country">Country</string>
    <string name="contactName">Contact Name</string>
    <string name="contactNo">Contact Number</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="connote">Consignment Number</string>
    <string name="park_remarks">Remarks</string>
    <string name="reason">Reason</string>
    <string name="park_unpark">Park or Unpark</string>
    <string name="status_code">Status</string>
    <string name="remarks">Remarks</string>
    <string name="date">Date</string>
    <string name="depot">Depot</string>
    <string name="pickup">Driver Pickup</string>
    <string name="rejectPickup">Reject Pickup</string>
    <string name="pickUp">Pickup</string>
    <string name="lithDecNotice">Good with Lithium Batteries requires a Battery Declaration to be provided.</string>
    <string name="lithBatCheck">Does goods contain Lithium Battery?</string>
    <string name="bat_yes">Yes</string>
    <string name="bat_no">No</string>
    <string name="lithDecCheck">Lithium Battery Declaration Provided?</string>
    <string name="dec_yes">Yes</string>
    <string name="dec_no">No</string>
    <string name="fdaCheck">Any Foods, Drugs or Alcohol in shipment?</string>
    <string name="fda_yes">Yes</string>
    <string name="fda_no">No</string>
    <string name="fdaDecCheck"><![CDATA[Foods Drugs & Alcohol Declaration(FDA) Provided?]]></string>
    <string name="fdaDec_yes">Yes</string>
    <string name="fdaDec_no">No</string>
    <string name="dgDecCheck">Dangerous Goods documents provided?</string>
    <string name="dgDec_yes">Yes</string>
    <string name="dgDec_no">No</string>
    <string name="get_parkCons">Get Parked Cons</string>
    <string name="upload_doc">Upload Documents</string>
    <string name="upload">Upload</string>
    <string name="upload_heading">Upload Image</string>
    <string name="file_name">File Name</string>
    <string name="edit_con">Edit Consignment</string>
    <string name="download">Download</string>
    <string name="connumber">Con Number</string>
    <string name="sender_details">Sender Details</string>
    <string name="status">Status</string>
    <string-array name="pay_term">
        <item>Sender</item>
        <item>Receiver</item>
    </string-array>
    <string-array name="park_reason">
        <item>Dangerous Goods</item>
        <item>Embargoed</item>
        <item>Missing/Incomplete Address</item>
        <item>Missing/Incomplete Paperwork</item>
        <item>Needs better Description</item>
        <item>Needs Lithium Battery Declaration</item>
        <item>Not Servicable</item>
    </string-array>
</resources>