<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_acc"
            android:hint="@string/acc"
            android:inputType="number"
            android:maxLength="9"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="64"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_address"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:maxLength="92"/>
        <EditText
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_city"
            android:hint="@string/city"
            android:inputType="textShortMessage"
            android:maxLength="35"
            />
        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_postcode"
            android:hint="@string/postcode"
            android:inputType="textShortMessage"
            android:maxLength="10"
            />
        <Spinner
            android:id="@+id/rec_country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_contact_name"
            android:hint="@string/contactName"
            android:inputType="textPersonName"
            android:maxLength="32"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_contact_no"
            android:hint="@string/contactNo"
            android:inputType="phone"
            android:maxLength="26"
           />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/receiver_complete"
            />


    </LinearLayout>
</ScrollView>