<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conId"/>
    <TextView
        android:text="@string/conId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/con_id" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/park_reason"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/park_remarks"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/park_remark"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:maxLength="64"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/park_btn"
        android:text="@string/park"/>
</LinearLayout>
    </ScrollView>